--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,6 +9,7 @@
 		<title>Madeline Tjoa</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -29,10 +30,12 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Madeline Tjoa</h1>
-											<p>Data Scientist</p>
+											<h1>About</h1>
+											<p>This is a site containing (almost) all projects created by Madeline Tjoa.</p>
 										</header>
-										<p>Hello! I am an aspiring
+										<p>Please feel free to view my resume below.</p>
+										<!-- https://www.linkedin.com/in/madelinetjoa/ -->
+									<!-- 	<p>Hello! I am an aspiring
 											 data scientist,
 											  who is also interested in pursuing a career
 												in the computer science industry.
@@ -80,43 +83,12 @@
 										 					 Binary Search Trees, Balanced Trees, Heaps, Graph traversals, and sorting algorithms. "
 										 						</br>
 															 </p>
-									</div>
+ -->									</div>
 								</section>
-								<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="https://www.linkedin.com/in/madeline-tjoa-39028a160/">
-										<h2>visit Linkedin</h2>
-										<div class="content">
-											<p>Explore Graphics and other artwork</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="java.html">
-										<h2>Java Projects</h2>
-										<div class="content">
-											<p>Languages include Java, Python, JavaScript, and C#.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="photography.html">
-										<h2>Photography Snaps</h2>
-										<div class="content">
-											<p>My favorite snapshots!</p>
-										</div>
-									</a>
-								</article>
-							</section>
+								<section style="height: 500px; width: 100%">
+											<iframe src="https://docs.google.com/document/d/e/2PACX-1vSSyNSg5s1NFbk2_JBVlFBS9k1c257nC9G7-SX19I6b0CdH83CrTq_Sp8j8pkbANR0lx31KSHhlciFY/pub?embedded=true" style="height: 100%; width: 100%"></iframe>
+								</section>
+								
 
 						</div>
 					</div>
@@ -132,7 +104,7 @@
 								</header>
 								<ul>
 									<li><a href="index.html">Homepage</a></li>
-									<li><a href="aboutMe.html">About Madeline</a></li>
+									<li><a href="aboutMe.html">About</a></li>
 									<li>
 										<span class="opener">Coding Projects</span>
 										<ul>
