--- a/broken_index.html
+++ b/broken_index.html
@@ -23,11 +23,6 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Madeline</strong> Tjoa</a>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									</ul>
 								</header>
 
 							<!-- Banner -->
@@ -37,23 +32,52 @@
 											<h1>Madeline Tjoa</h1>
 											<p>Data Scientist</p>
 										</header>
-										<p></p>
-									</div>
-								</section>
-								<section>
-									<p>A website of projects done by Madeline Tjoa from 2013 til now.</p>
+										<p>A website of projects done by Madeline Tjoa from 2013 til now.</p>
 										<p>Check out my projects on devpost:<a href = "https://devpost.com/Maderlime"> devpost </a> </p>
 										<p>Check out my projects github:<a href = "https://github.com/Maderlime"> github</a> </p>
 										<p>Check out my Linkedin:<a href = "https://www.linkedin.com/in/madelinetjoa/"> linkedin</a> </p>
 										<br><br>
 										</section>
-										<section style="height: 100%; width: 80%">
+										<section style="height: 500px; width: 80%">
 										<iframe src="https://mtjoa-photography.web.app"
 								    			title="Photography Web app" width="100%" height="500px">
 										</iframe>
 										<p>Currently working on firebase! <a href = "https://mtjoa-photography.web.app" >Click Here to view a Live gallery of photos.</a></p>
-								</section>							
-								<section class="tiles">
+
+										</section>
+
+<!-- 										
+										<p>(don't mind this - it's a test)</p>
+										
+										<div id="parent">
+
+											<iframe title="Rhode Island well being Index"
+											aria-label="Map"
+											id="datawrapper-chart-zyBm6" src="https://datawrapper.dwcdn.net/zyBm6/1/"
+											scrolling="no" frameborder="0"
+											style="width: 0; min-width: 50%;
+											!important; border:none;" height="400">
+
+											</iframe>
+
+											<img src = "images/ptable.jpg" width=" 100%" style="margin-top:-100px;"></img>
+
+										</div> -->
+
+										
+							<!-- Scripts -->
+<!-- 								<script>
+									if ('addEventListener' in window) {
+										window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
+										document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+									}
+								</script>
+ -->
+
+									</div>
+
+
+							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
@@ -88,52 +112,54 @@
 									</a>
 								</article>
 							</section>
+
 						</div>
 					</div>
-
+				</section>>
 				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
+				<div id="sidebar">
+					<div class="inner">
 
-							<!-- Menu -->
-							<nav id="menu">
-								<header class="major">
-									<h2>Menu</h2>
-								</header>
-								<ul>
-									<li><a href="index.html">Homepage</a></li>
-									<li><a href="aboutMe.html">About Madeline</a></li>
-									<li>
-										<span class="opener">Coding Projects</span>
-										<ul>
-											<li><a href="java.html">Java</a></li>
-											<li><a href="python.html">Python</a></li>
-											<li><a href="csharp.html">C#</a></li>
-											<li><a href="javascript.html">JavaScript</a></li>
-											<li><a href="flash.html">Flash</a></li>
-											<li><a href="HTML.html">HTML</a></li>
-										</ul>
-									</li>
-									<li>
-										<span class="opener">Visual Projects</span>
-										<ul>
-											<li><a href="photography.html">Photography</a></li>
-											<li><a href="illustrator.html">Illustrator Graphics</a></li>
-											<li><a href="otherArt.html">other Graphics</a></li>
-										</ul>
-									</li>
-									<li><a href="contact.html">Contact</a></li>
-								</ul>
-							</nav>
+						<!-- Menu -->
+						<nav id="menu">
+							<header class="major">
+								<h2>Menu</h2>
+							</header>
+							<ul>
+								<li><a href="index.html">Homepage</a></li>
+								<li><a href="aboutMe.html">About Madeline</a></li>
+								<li>
+									<span class="opener">Coding Projects</span>
+									<ul>
+										<li><a href="java.html">Java</a></li>
+										<li><a href="python.html">Python</a></li>
+										<li><a href="csharp.html">C#</a></li>
+										<li><a href="javascript.html">JavaScript</a></li>
+										<li><a href="flash.html">Flash</a></li>
+										<li><a href="HTML.html">HTML</a></li>
+									</ul>
+								</li>
+								<li>
+									<span class="opener">Visual Projects</span>
+									<ul>
+										<li><a href="photography.html">Photography</a></li>
+										<li><a href="illustrator.html">Illustrator Graphics</a></li>
+										<li><a href="otherArt.html">other Graphics</a></li>
+									</ul>
+								</li>
+								<li><a href="contact.html">Contact</a></li>
+							</ul>
+						</nav>
 
 
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Maderlime 2020. All rights reserved. Design: HTML5 UP.</p>
-								</footer>
+						<!-- Footer -->
+							<footer id="footer">
+								<p class="copyright">&copy; Maderlime 2020. All rights reserved. Design: HTML5 UP.</p>
+							</footer>
 
-						</div>
 					</div>
+				</div>
+
 
 			</div>
 
