--- a/coding_projects.html
+++ b/coding_projects.html
@@ -34,60 +34,22 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Madeline Tjoa</h1>
-											<p>Data Scientist</p>
+											<h1>Coding Projects</h1>
+											<p>Includes Data Science Projects, iOS, a variety of languages, and more.</p>
 										</header>
-										<p></p>
+										<p>Some Projects link to external sites.</p>
 									</div>
 								</section>
-								<section>
-									<p>A website of projects done by Madeline Tjoa from 2013 til now.</p>
-										<p>Check out my projects on devpost:<a href = "https://devpost.com/Maderlime"> devpost </a> </p>
-										<p>Check out my projects github:<a href = "https://github.com/Maderlime"> github</a> </p>
-										<p>Check out my Linkedin:<a href = "https://www.linkedin.com/in/madelinetjoa/"> linkedin</a> </p>
-										<br><br>
-										</section>
-										<section style="height: 100%; width: 80%">
-										<iframe src="https://mtjoa-photography.web.app"
-								    			title="Photography Web app" width="100%" height="500px">
-										</iframe>
-										<p>Currently working on firebase! <a href = "https://mtjoa-photography.web.app" >Click Here to view a Live gallery of photos.</a></p>
-								</section>							
-								<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="otherArt.html">
-										<h2>Graphic Projects</h2>
-										<div class="content">
-											<p>Explore Graphics and other artwork</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="java.html">
-										<h2>Java Projects</h2>
-										<div class="content">
-											<p>Languages include Java, Python, JavaScript, and C#.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="photography.html">
-										<h2>Photography</h2>
-										<div class="content">
-											<p>My favorite snapshots!</p>
-										</div>
-									</a>
-								</article>
-							</section>
+
+
+								<section style="height: 100%; width: 95%">
+									<iframe src="https://mtjoa-coding.web.app"
+							    			title="Coding Web app" width="100%" height="500px">
+									</iframe>
+									</section>
+
+
+
 						</div>
 					</div>
 
@@ -118,7 +80,7 @@
 										<span class="opener">Visual Projects</span>
 										<ul>
 											<li><a href="photography.html">Photography</a></li>
-											<li><a href="illustrator.html">Illustrator Graphics</a></li>
+											<li><a href="illustrator">Illustrator Graphics</a></li>
 											<li><a href="otherArt.html">other Graphics</a></li>
 										</ul>
 									</li>
